src/objects/BMCServiceDesk__SYSQVPageReference__c.object
<CustomObject>
    <description>This stores the details of the pages which are associated to the objects used in the quickview</description>
    <fields>
        <fullName>BMCServiceDesk__FKSYSPageObjectAssociation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FKSYSPageObjectAssociation</label>
        <referenceTo>BMCServiceDesk__SYSPageObjectAssociation__c</referenceTo>
        <relationshipLabel>SYSQVPageReferences</relationshipLabel>
        <relationshipName>SYSQVs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKSYSQVQuery__c</fullName>
        <label>FKSYSQVQuery</label>
        <referenceTo>BMCServiceDesk__SYSQVQuery__c</referenceTo>
        <relationshipLabel>SYSQVPageReferences</relationshipLabel>
        <relationshipName>SYSQVs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Sequence__c</fullName>
        <externalId>true</externalId>
        <label>Sequence Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Quickview Page Reference</label>
    <listViews>
        <fullName>BMCServiceDesk__All</fullName>
        <columns>BMCServiceDesk__FKSYSQVQuery__c</columns>
        <columns>BMCServiceDesk__FKSYSPageObjectAssociation__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>SYSQV Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SYSQVPageReferences</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>